added text to notebooks

--- a/BinaryClassificationPyspark.ipynb
+++ b/BinaryClassificationPyspark.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets load the important libraries"
+    "This example shows how to do binary classification in Pyspark using Spark MLlib. The data set used is open source orange telecoms churn prediction data set. Two of the main classifiers tested are logistic regression and random forests. For this particular problem , random forest beats the logistic regression hands down with an accuracy of 86%."
    ]
   },
   {
