added text to notebooks

--- a/TimeSeriesTensorFlow.ipynb
+++ b/TimeSeriesTensorFlow.ipynb
@@ -4,16 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example shows how to do time series prediction with recurrent neural networks type LSTM (long short term memory) with distributed deep learning frameworks. I am mainly using Keras with Tensorflow. . LSTMs are also used for language modeling and othe sequence modeling tasks. "
+    "This example shows how to do time series prediction with recurrent neural networks type LSTM (long short term memory) over distributed deep learning frameworks. I am mainly using Keras with Tensorflow. . LSTMs are also used for language modeling and othe sequence modeling tasks. \n",
+    "The data set used is energy volume data set from Dutch regulator Tennet. It is an open source data set. Tennet announces the energy volume used to the distributers in real time. This volume determines the price of the energy in day-time trading market, and it is very important to predict this for energy companies so that they can position themselves accordingly.The model built is not as sophisticated as an energy company would use how"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
